--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img
+  src="http://s3.amazonws.com/ironboard-learn/lion.jpg"
+  alt="my company name"
+  title="We're here to help you!"
+/>
+<img
+  src="http://s3.amazonws.com/ironboard-learn/lion.jpg"
+  alt="my company name"
+  title="We' here to help you!"
+/>
+<img
+  src="http://s3.amazonws.com/ironboard-learn/lion.jpg"
+  alt="my company name"
+  title="We' here to help you!"
+/>
   </body>
 </html>
